Closed
Bug 489258
Opened 12 years ago
Closed 12 years ago
[MSFT-12113] Firefox window doesn't maintain docked position when minimized and restored.
Categories
(Firefox :: General, defect, P1)
Tracking
()
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
status1.9.1 | --- | .4-fixed |
People
(Reporter: abillings, Assigned: jimm)
References
Details
Attachments
(2 files, 3 obsolete files)
2.14 KB,
patch
|
emaijala+moz
:
review+
dveditz
:
approval1.9.1.4+
|
Details | Diff | Splinter Review |
9.88 KB,
patch
|
emaijala+moz
:
review+
|
Details | Diff | Splinter Review |
Description of the Problem: Firefox window doesn't maintain docked position when minimized and restored. Detailed Steps to Reproduce the Problem: 1. Install Windows 7 2. Install Firefox from www.firefox.com 3. Launch Firefox 4. Dock it to the right of the screen using mouse 5. Minimize Firefox (using the minimize button or Winkey + M) 6. Restore Firefox by clicking on the icon in the Superbar 7. Actual Result - Firefox is restored to its location before it was docked to the right of the screen Note: This behavior is not consistent with other Internet Browsers: Internet Explorer. Tester/Developer Notes: Firefox was installed on a machine and launched. The size of the window of Firefox was adjusted using the WinKey +M, and then re-sized using the icon on the Superbar, however Firefox did not resume it original position on the screen. Al's Note: I don't see the Superbar (just gadgets) in the public build of Windows 7 so I was unable to verify this bug. Marking this for 1.9.1 by default but we should find out what version of Firefox was used and if we can get access to a more current Windows 7 build.
![]() |
Assignee | |
Updated•12 years ago
|
Assignee: nobody → jmathies
![]() |
Assignee | |
Updated•12 years ago
|
Severity: normal → major
Priority: -- → P1
![]() |
Assignee | |
Comment 1•12 years ago
|
||
On trunk this isn't reproducible. Both side docking and maximization on top restore correctly. For 3.5 though, max works, but side dock does something really strange, it restores to the docked position, then repositions to the old window position before the doc. Tracking down the different landings is going to be a pain, so I'll just debug and see if I can come up with a 1.9.1 one off for a future 3.5.x update release.
![]() |
Assignee | |
Comment 2•12 years ago
|
||
![]() |
Assignee | |
Comment 3•12 years ago
|
||
The bug was present on both trees but was masked by changes in our focus related code. This is the same bug fix as 191 with the addition of a new poschanged event handler. building some 191 try builds before reviews to do some final release build testing.
![]() |
Assignee | |
Comment 4•12 years ago
|
||
Doh, debug code leftovers - + static bool sbFlip = false; That will be removed from the final 191 patch. :)
![]() |
Assignee | |
Comment 5•12 years ago
|
||
Attachment #389164 -
Attachment is obsolete: true
![]() |
Assignee | |
Comment 6•12 years ago
|
||
minor nit - updated the bug number in the comments. Tested on 1.9.1 with a release build, looks good. https://build.mozilla.org/tryserver-builds/jmathies@mozilla.com-489258-191v1/
Attachment #389167 -
Attachment is obsolete: true
Attachment #389204 -
Flags: review?(emaijala)
![]() |
Assignee | |
Comment 7•12 years ago
|
||
ditto. https://build.mozilla.org/tryserver-builds/jmathies@mozilla.com-489258-mcv1/ With trunk, the problem was mitigated by other landings, but the same underlying problem is there so it's worthy of fixing.
Attachment #389165 -
Attachment is obsolete: true
Attachment #389205 -
Flags: review?(emaijala)
Updated•12 years ago
|
Attachment #389204 -
Flags: review?(emaijala) → review+
Updated•12 years ago
|
Attachment #389205 -
Flags: review?(emaijala) → review+
Comment 10•12 years ago
|
||
I'm not sure if this is a helpful comment, but this also happens in the 64-bit version of Windows 7.
![]() |
Assignee | |
Comment 11•12 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/120ae039b6e0
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
![]() |
Assignee | |
Updated•12 years ago
|
Attachment #389204 -
Flags: approval1.9.1.4?
Comment 12•12 years ago
|
||
This push seems to have accidentally reverted the change made in bug 504499. Oops! (We'll fix it again, just a heads up to be careful.)
Comment 13•12 years ago
|
||
Comment on attachment 389204 [details] [diff] [review] sizemode fix for 191 v.1 Approved for 1.9.1.4, a=dveditz for release-drivers
Attachment #389204 -
Flags: approval1.9.1.4? → approval1.9.1.4+
![]() |
Assignee | |
Comment 14•12 years ago
|
||
(In reply to comment #13) > (From update of attachment 389204 [details] [diff] [review]) > Approved for 1.9.1.4, a=dveditz for release-drivers http://hg.mozilla.org/releases/mozilla-1.9.1/rev/25498faa9c88
Updated•12 years ago
|
status1.9.1:
--- → .4-fixed
Reporter | ||
Comment 15•12 years ago
|
||
How exactly do we turn on the super bar for docking?
![]() |
Assignee | |
Comment 16•12 years ago
|
||
(In reply to comment #15) > How exactly do we turn on the super bar for docking? Not sure I understand the question. You can pin apps to the taskbar (which display as icons as in the old quick launch) by right clicking the icon of a running instance. Docking on the desktop should "just work" by dragging the window toward an edge. Also, some features of the new taskbar are not enabled if you do not have the aero interface enabled, which is often the case if you run it in an image.
You need to log in
before you can comment on or make changes to this bug.
Description
•