Bug 489258 - Firefox window doesn't maintain win7 docked position when minimized and restored. r=emaijala.